[package]
name = "sessio"
version = "0.1.0"
description = "Tui focus session application"
authors = ["zyl_hub"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
chrono = { version = "0.4", features = ["serde"] }
rodio = "0.19.0"
walkdir = "2.4.0"
dirs = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rand = "0.8"
